test/tests/errors/error-array-size-less-than-one2.sm
// true
// true
// false
/**/
/**/

program {
    array x[2:1]: int;
}